# maximin

./: .gitignore  Cargo.toml  Makefile  README.rst  pyproject.toml  requirements-dev.txt
funlib_match_helpers/: __init__.py
maximin/: __init__.py
src/: lib.rs  nd_array.rs  scored.rs
tests/: test_basic.py  test_constraints.py  test_maximin_tree.py  test_more_dims.py  test_mst.py
