[package]
name = "maximin"
version = "0.1.0"
authors = ["pattonw <pattonw@hhmi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maximin"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-dist = ["numpy"]
requires-python = ">=3.6"

[dependencies]
pyo3 = { version = "0.11", features = ["extension-module"] }
numpy = { git = "https://github.com/PyO3/rust-numpy" }
ndarray = "0.13"
petgraph = "0.5.0"
ndarray-rand = "0.11"
rand_isaac = "0.2.0"
itertools = "0.9.0"